COMPLETED WITHOU BACKGROUND

--- a/index.html
+++ b/index.html
@@ -4,13 +4,89 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="container" id="background">
+      <div class="main-part">
+          <section class="mobile">
+            <img src="images/phones.png" alt="phones"/>
+          </section>
+          <div class="text-box">
+            <div class="log-in-box">
+             <img class="logo" src="images/brand.png" alt="instagram logo" height="65px">
+             <button class="button"type="submit"><img id="house-icon" src="images/home.png" alt="home" height="17px">Log in</button>
+            </div>
+            <section class="main-text">
+              <div class="just-text">
+               <h2>Capture and Share the World's Moments</h2>
+               <p class="description">Instagram is a fast, beautiful and fun way to share your life with
+                friends and family.
+                </p> 
+                <p class="description">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+                </p>
+                <p class="description">
+                  Oh yeah, did we mention it's free?
+                </p>
+              </div>
+            </section>
+            <section>
+              <div class="download">
+               <img src="images/badge-iphone.png" alt="Download on the App Store" class="apple" height="45px"/>
+                <img src="images/badge-android.png" alt="Get it on Google Play" height="45px"/>
+            </div>
+          </section>
+        </div>
+      </div>
+      <footer class="footer-box">
+          <p>
+            <a href="">
+            ABOUT US
+            </a>
+          </p>
+          <p>
+            <a href="">
+            SUPPORT
+            </a>
+          </p>
+          <p>
+            <a href="">
+            BLOG
+            </a>
+          </p>
+          <p>
+            <a href="">
+            PRESS
+            </a>
+          </p>
+          <p>
+            <a href="">
+            API
+            </a>
+          </p>
+          <p>
+            <a href="">
+            JOBS
+            </a>
+          </p>
+          <p>
+            <a href="">
+            PRIVACY
+            </a>
+          </p>
+          <p>
+            <a href="">
+            TERMS
+            </a>
+          </p>
+          <p>
+            <a href="">
+              &copy; 2014 INSTAGRAM
+            </a>
+          </p>
+       </footer>
+  </div>
   </body>
 </html>
+œ
