--- a/index.html
+++ b/index.html
@@ -1,16 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./styles/normalize.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="container">
+      <section id="blue-section">
+        <div class="iphone">
+          <img src="./images/phones.png" alt="iphone-image" />
+        </div>
+
+        <div class="content">
+          <div class="header">
+            <div>
+              <img src="./images/brand.png" alt="instagram-logo" />
+            </div>
+
+            <div class="login">
+              <img src="./images/home.png" alt="login-home" />
+              <a href="#login">Log in</a>
+            </div>
+          </div>
+
+          <div class="text-content">
+            <span>Capture and Share the World's Moments</span>
+            <p>
+              Instagram is a fast, beautiful and fun way to share your life with
+              friends and family. Take a picture or video, choose a filter to
+              transform its look and feel, then post to Instagram - it's
+              that easy. You can even share to Facebook, Twitter, Tumblr and
+              more. It's a new way to see the world. Oh yeah, did we mention
+              it's free?
+            </p>
+          </div>
+        </div>
+        
+      </section>
+
+      <section id="white-section"></section>
+      <footer>
+        <div class="footer">
+          <ul>
+            <li><a href="#">about us</a></li>
+            <li><a href="#">support</a></li>
+            <li><a href="#">blog</a></li>
+            <li><a href="#">press</a></li>
+            <li><a href="#">api</a></li>
+            <li><a href="#">jobs</a></li>
+            <li><a href="#">privacy</a></li>
+            <li><a href="#">terms</a></li>
+          </ul>
+          <span>©2014 instagram</span>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
