--- a/index.html
+++ b/index.html
@@ -4,13 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    <div id="main-cont">
+      <div id="smartphone">
+        <img src="./images/phones.png" alt="phones-demo">
+      </div>
+      <div id="elements">
+        <div id="logo-and-bottom">
+          <img src="./images/brand.png" alt="logo-instagram">
+          <img src="./images/home.png" alt="logo-home">
+        </div>
+        <div id="text-box">
+          <h1>
+            Instagram Capture and Share the World's Moments
+          </h1>
+          <p>
+            Instagram is a fast, beautiful and fun way to share your life with
+    friends and family. <br/>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</br>
+          Oh yeah, did we mention it's free?     
+          </p>
+        </div>
+        <div id="stores">
+          <img src="./images/badge-iphone.png" alt="apple-store">
+          <img src="./images/badge-android.png" alt="play-store">
+        </div>
+      </div>
+    </div>
+      <div id='footer'>
+        <ul>
+          <li><a href="#tbd">ABOUT US</a></li>
+          <li><a href="#tbd">SUPPORT</a></li>
+          <li><a href="#tbd">BLOG</a></li>
+          <li><a href="#tbd">PRESS</a></li>
+          <li><a href="#tbd">API</a></li>
+          <li><a href="#tbd">JOBS</a></li>
+          <li><a href="#tbd">PRIVACY</a></li>
+          <li><a href="#tbd">TERMS</a></li>
+          <li><a href="#tbd">@2014 INSTAGRAM</a></li>
+        </ul>
+      </div>
+    </body>
 </html>
