--- a/index.html
+++ b/index.html
@@ -1,16 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="./styles/style.css" />
+</head>
+
+<body>
+
+  <section class="top">
+
+    <div class="phones">
+      <img src="./images/phones.png" alt="">
+    </div>
+  
+
+    <div class="midle">
+      <div class="midle-top">
+       <div class="brand">
+        <img src="./images/brand.png" alt="">
+       </div>
+
+       <div id="login-button">
+        <img src="./images/home.png" />
+        <span class="btn">Log In</span>
+      </div>
+    </div>
+     
+      <div class="text">
+        <h1>Capture and Share the World's Moments </h1>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+          <br><br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.
+          <br><br>Oh yeah, did we mention it's free? </p>
+      </div>
+
+      <div class="apps">
+        <img class="ios" src="./images/badge-iphone.png" alt="">
+        <img class="android" src="./images/badge-android.png" alt="">
+      </div>
+    
+    </div>
+
+  </section>
+
+  <section class="footer-flex">
+    <div>About Us </div>
+    <div>Support</div>
+    <div>Blog</div>
+    <div>Press</div>
+    <div>API</div>
+    <div>Jobs</div>
+    <div>Privacy</div>
+    <div>Terms</div>
+    <div class="gray-footer">&copy; 2014 Instagram</div>
+  </section>
+
+
+</body>
+
 </html>
+
+<!-- 
+
+<img src="./images/frame.png" alt="">
+
+<img src="./images/bgtile.png" alt="">
+ -->
