--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="page" id="background">
+  <div class="background">
     <div class="general-block">
       <img src="/images/phones.png" alt="phones">
       <div class="right-block">
