feat: html construction and add some css

--- a/index.html
+++ b/index.html
@@ -7,10 +7,42 @@
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="row-center">
+      <section>
+        <img src="images/phones.png" alt="Phone Images">
+      </section>
+      <section class="column-center">
+        <div class="brand">
+          <img src="images/brand.png" alt="Instagram">
+          <button class="row-center">
+            <img src="images/home.png" alt="Home">
+            <p>Log in</p>
+          </button>
+        </div>
+        <div class="column-center text-background">
+          <h4>Capture and Share the World's Moments</h4>
+          <p>Instagram is a fast, beautiful and fun way to share your life <br> with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look <br> and feel, then post to Instagram &mdash; it's that easy. You can <br> even share to Facebook, Twitter, Tumblr and more. It's a <br> new way to see the world.</p>
+          <p> Oh yeah, did we mention it's free?</p>
+          <div>
+            <img src="images/badge-iphone.png" alt="Download on the App Store">
+            <img src="images/badge-android.png" alt="Get it on Google Play">
+          </div>
+        </div>
+      </section>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+      </ul>
+      <p>&copy; 2014 Instagram</p>
+    </nav>  
   </body>
 </html>
