--- a/index.html
+++ b/index.html
@@ -1,16 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+
+  <div id="blue-top">
+  </div>
+  <div id="container">
+    <div class="smartphones">
+      <img src="./images/phones.png" alt="smartphones-images" />
+      <div class="content">
+        <div class="logo-and-home">
+          <img class="instagram-logo" src="./images/brand.png" alt="instagram-logo" />
+          <img class="home-button" src="./images/home.png" alt="home-button" />
+          <a href="#" class="log-in-btn">Log in</a>
+        </div>
+        <div class="white-box">
+          <img class="frame" src="./images/frame.png" alt="white box" />
+          <h1>Instagram Capture and Share <br> the World's Moments</h1>
+          <p><br>Instagram is a fast, beautiful and fun way to share your life
+            <br>with friends and family.<br>
+            <br> Take a picture or video, choose a filter to transform its look
+            <br>and feel, then post to Instagram &mdash; it's that easy. You can
+            <br>even share to Facebook, Twitter, Tumblr and more. It's a
+            <br>new way to see the world.
+            <br>Oh yeah, did we mention it's free?</p>
+            <div class="stores-btn">
+            <img class="btn-apple" src="./images/badge-iphone.png" alt="apple-store-button" />
+            <img class="btn-android" src="./images/badge-android.png" alt="google-store-button" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>  
+    <footer class="footer">
+      <a href="#" class="about">About us</a>
+      <a href="#" class="support">Support</a>
+      <a href="#" class="blog">Blog</a>
+      <a href="#" class="press">Press</a>
+      <a href="#" class="api">API</a>
+      <a href="#" class="job">Jobs</a>
+      <a href="#" class="privacy">Privacy</a>
+      <a href="#" class="terms">Terms</a>
+      <p>&copy; 2014 Instagram</p>
+    </footer>
+
+</body>
+
 </html>
