--- a/index.html
+++ b/index.html
@@ -1,16 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="styles/style.css">
+  <!-- don't forget to link your styles -->
+</head>
+
+<body class="background">
+
+<div class="god-section">
+  <img class="phones" src="/images/phones.png" alt="phones">
+
+  <div class="main-section">
+
+    <section class="icon-section">
+
+    <div class="instagramIcon"> <img src="/images/brand.png" alt="Instagram"></div> <div class="logIn-icon"><img src="/images/home.png" alt="home-icon"> Log In</div>
+    </section>
+    
+    <div class="right-div frame">
+
+      <h2> Capture and Share the World's Moments</h2>
+      <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to
+        Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+        world.</p>
+        <p>Oh yeah, did we mention it's free?</p> 
+
+      <div class="icons">
+        <div><img src="/images/badge-iphone.png" alt="Iphone"></div> <div><img src="images/badge-android.png"></div>
+      </div>
+
+    </div>
+
+  </div>
+ </div> 
+  <footer class="footer-section">
+    <a href="#">About Us</a><a href="#">Support</a><a href="#">Blog</a><a href="#">Press</a><a href="#">API</a><a href="#">Jobs</a><a href="#">Privacy</a><a href="#">Terms</a> &copy; 2014 Instagram
+  </footer>
+</body>
+
 </html>
