Trabajando en el responsive

--- a/index.html
+++ b/index.html
@@ -1,16 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link href="styles/style.css" rel="stylesheet" type="text/css" />
+</head>
+
+
+<body>
+
+  <div class="back-header"></div>
+  <nav>
+
+    <div class="container">
+
+      <img src="images/phones.png" alt="iphone" class="">
+
+      <div class="box">
+
+        <section class="buttons">
+          <img src="images/brand.png" alt="brand">
+          <div class="login">
+            <button id="startBtn"><img src=images/home.png alt=logo-home>
+
+              <p>Log in</p>
+            </button>
+          </div>
+        </section>
+
+        <section class="content">
+          <h1>Capture and Share <br> theWorld's Moments</h1>
+          <p>Instagram is a <b>fast, beautiful </b> and <b> fun</b> way to share your life with
+            friends and family. <br> <br> Take a picture or video, choose a filter to transform its
+            look and feel, then post to Instagram &mdash; it's that easy. You can even share to
+            Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br> <br>
+            Oh yeah, did we mention it's free?
+          </p>
+          <div class="stores">
+
+            <input type="image" src="images/badge-iphone.png" />
+
+            <input type="image" src="images/badge-android.png" />
+
+          </div>
+        </section>
+
+      </div>
+
+    </div>
+
+    <footer>
+      <ul>
+        <li><a href="url">ABOUT US</a></li>
+        <li><a href="url">SUPPORT</a></li>
+        <li><a href="url">BLOG</a></li>
+        <li><a href="url">PRESS</a></li>
+        <li><a href="url">API</a></li>
+        <li><a href="url">JOBS</a></li>
+        <li><a href="url">PRIVACY</a></li>
+        <li><a href="url">TERMS</a></li>
+
+        <li>&copy; 2014 INSTAGRAM</li>
+
+      </ul>
+    </footer>
+
+
+  </nav>
+
+</body>
+
 </html>
