--- a/index.html
+++ b/index.html
@@ -1,16 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+    <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+    <header>
+        <div class="page-content">
+            <img src="images/phones.png" alt="phones">
+            <div class="general-content">
+                <div class="logo-title">
+                    <img src="images/brand.png" alt="Instagram-band"> <button class="bg-l-blue"><img class="btn-icon" src="images/home.png" alt="home"> Log in</button>
+                </div>
+                <div class="description-content">
+                    <h2 class="blue-title">Capture and Share the World's Moments</h2><br>
+                    <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br><br> Take a picture or video, choose a filter to transform its look and feel, then post to
+                        Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>Oh yeah, did we mention it's free?</p>
+                </div>
+                <div class="app-logos">
+                    <img src="images/badge-iphone.png" alt="badge-iphone">
+                    <img src="images/badge-android.png" alt="badge-android">
+                </div>
+            </div>
+        </div>
+    </header>
+    <footer>
+        <ul>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Support</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Press</a></li>
+            <li><a href="">API</a></li>
+            <li><a href="">Jobs</a></li>
+            <li><a href="">Privacy</a></li>
+            <li><a href="">Terms</a></li>
+            <li><a href="" class="instagram-copy">&copy; 2014 Instagram</a></li>
+        </ul>
+    </footer>
+</body>
+
 </html>
