--- a/index.html
+++ b/index.html
@@ -10,35 +10,46 @@
   <body>
     <div class="container">
       <section id="blue-section">
-        <div class="iphone">
-          <img src="./images/phones.png" alt="iphone-image" />
-        </div>
-
-        <div class="content">
-          <div class="header">
-            <div>
-              <img src="./images/brand.png" alt="instagram-logo" />
-            </div>
-
-            <div class="login">
-              <img src="./images/home.png" alt="login-home" />
-              <a href="#login">Log in</a>
-            </div>
+        <div class="all-content">
+          <div class="iphone">
+            <img src="./images/phones.png" alt="iphone-image" />
           </div>
 
-          <div class="text-content">
-            <span>Capture and Share the World's Moments</span>
-            <p>
-              Instagram is a fast, beautiful and fun way to share your life with
-              friends and family. Take a picture or video, choose a filter to
-              transform its look and feel, then post to Instagram - it's
-              that easy. You can even share to Facebook, Twitter, Tumblr and
-              more. It's a new way to see the world. Oh yeah, did we mention
-              it's free?
-            </p>
+          <div class="content">
+            <div class="header">
+              <div class="logo">
+                <img src="./images/brand.png" alt="instagram-logo" />
+              </div>
+
+              <div class="login">
+                <button>
+                  <img src="./images/home.png" alt="login-home" />
+                  <a href="#login">Log in</a>
+                </button>
+              </div>
+            </div>
+
+            <div class="text-content">
+              <span>Capture and Share the World's Moments</span>
+              <p>
+                Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way
+                to share your life with friends and family.
+              </p>
+              <p>
+                Take a picture or video, choose a filter to transform its look
+                and feel, then post to Instagram - it's that easy. You can even
+                share to Facebook, Twitter, Tumblr and more. It's a new way to
+                see the world.
+              </p>
+
+              <p>Oh yeah, did we mention it's free?</p>
+              <div class="images-only">
+                <img src="./images/badge-iphone.png" alt="" />
+                <img src="./images/badge-android.png" alt="" />
+              </div>
+            </div>
           </div>
         </div>
-        
       </section>
 
       <section id="white-section"></section>
