--- a/index.html
+++ b/index.html
@@ -4,13 +4,44 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
+<link rel="stylesheet" href="styles/style.css">  </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header>
+      <section class="main-container">
+        <div class="img-movile"></div>
+        <div class="cont-vert">
+          <div class="cont-hor">
+            <a href="#"><img src="images/brand.png" alt="" class="logo-ig"></a>
+            <button class="btn-home"><img src="images/home.png" alt="" srcset=""> Log In </button>
+          </div>
+          <div class="contenido">
+            <h1>Capture and Share<br> the World's Moments</h1>
+            <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that
+              easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class="cont-footer">
+              <div class="btn-store"><a href="#"><img src="images/badge-iphone.png" alt="app store button" srcset="" class="img-btn-store"></a></div>
+              <div class="btn-store"><a href="#"><img src="images/badge-android.png" alt="google play button" srcset="" class="img-btn-store"></a></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <footer>
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li>@ 2014 Instagram</li>
+        </ul>
+      </footer>
+    </header>
+    
+    
   </body>
 </html>
