--- a/index.html
+++ b/index.html
@@ -1,16 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+  <section>  
+      <div id="backgroundBlue">
+      <div id="logo-button"> 
+      <img src="images/brand.png" alt="logo-Instagram">
+      <button type="button" class="btn"> Log in</button>
+      </div>
+    </div>
+<div id="box-phone">
+  <img src="images/phones.png">
+    <div id="new-box">
+      <div id="backgroundWhite">
+        <h1>Capture and Share <br>the World's Moments</h1>
+        <p> Instagram is a fast, beautiful and fun way to share your life</br> with
+          friends and family. </br>Take a picture or video, choose a filter to transform its look</br> and feel, then post to
+          Instagram
+          &mdash; it's that easy. You can</br> even share to Facebook, Twitter, Tumblr and more. It's a </br>new way to see the
+          world.
+        </br>
+      
+        </p>
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
+      </br>
+        <div id="stores">
+          <img src="images/badge-iphone.png">
+          <img src="images/badge-android.png">
+        </div>
+      </div>
+    </div>
+  </div>
+      <footer id="footer">  
+        About Us Support Blog Press API Jobs Privacy Terms
+        <span>&copy 2014 Instagram</span>
+      </footer>
+
+  </section>
+
+</body>
+
 </html>
