--- a/index.html
+++ b/index.html
@@ -1,48 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <link rel="stylesheet" href="styles/style.css">
-  </head>
-  <body>
-    <div class="row-center">
-      <section>
-        <img src="images/phones.png" alt="Phone Images">
-      </section>
-      <section class="column-center">
-        <div class="brand">
-          <img src="images/brand.png" alt="Instagram">
-          <button class="row-center">
-            <img src="images/home.png" alt="Home">
-            <p>Log in</p>
-          </button>
-        </div>
-        <div class="column-center text-background">
-          <h4>Capture and Share the World's Moments</h4>
-          <p>Instagram is a fast, beautiful and fun way to share your life <br> with friends and family.</p>
-          <p>Take a picture or video, choose a filter to transform its look <br> and feel, then post to Instagram &mdash; it's that easy. You can <br> even share to Facebook, Twitter, Tumblr and more. It's a <br> new way to see the world.</p>
-          <p> Oh yeah, did we mention it's free?</p>
-          <div>
-            <img src="images/badge-iphone.png" alt="Download on the App Store">
-            <img src="images/badge-android.png" alt="Get it on Google Play">
-          </div>
-        </div>
-      </section>
-    </div>
-    <nav>
-      <ul>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Support</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Press</a></li>
-        <li><a href="#">API</a></li>
-        <li><a href="#">Jobs</a></li>
-        <li><a href="#">Privacy</a></li>
-        <li><a href="#">Terms</a></li>
-      </ul>
-      <p>&copy; 2014 Instagram</p>
-    </nav>  
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+  <header>
+    <img class="phones" src="images/phones.png" alt="Phone Images">
+    <section>
+      <div class="brand">
+        <img src="images/brand.png" alt="Instagram">
+        <button>
+          <img src="images/home.png" alt="Home">
+          <p>Log in</p>
+        </button>
+      </div>
+      <div class="container">
+        <h4>Capture and Share <br> the World's Moments</h4>
+        <p>Instagram is a fast, beautiful and fun way to share your life <br> with friends and family.</p> 
+        <p>Take a picture or video, choose a filter to transform its look <br> and feel, then post to Instagram &mdash;
+        it's that easy. You can <br> even share to Facebook, Twitter, Tumblr and more. It's a <br> new way to see the
+        world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+        <div class="store">
+          <a href="https://www.apple.com/downloads/"><img class="appleAndroid" src="images/badge-iphone.png" alt="Download on the App Store"></a>
+          <a href="https://play.google.com/store/apps?hl=es&gl=US"><img class="appleAndroid" src="images/badge-android.png" alt="Get it on Google Play"></a>
+      </div>
+    </section>
+  </header>
+  <nav>
+    <ul>
+      <li><a href="#">ABOUT US</a></li>
+      <li><a href="#">SUPPORT</a></li>
+      <li><a href="#">BLOG</a></li>
+      <li><a href="#">PRESS</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">JOBS</a></li>
+      <li><a href="#">PRIVACY</a></li>
+      <li><a href="#">TERMS</a></li>
+    </ul>
+    <p>&copy; 2014 INSTAGRAM</p>
+  </nav>
+</body>
+
 </html>
