--- a/index.html
+++ b/index.html
@@ -3,14 +3,54 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <title> Instagram Clone </title>
+    <link rel=styleSheet href="styles/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
+
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header>
+
+      <div>
+        <div class="phones">
+          <img src="images/phones.png" alt="Image of mobile phones>">
+        </div>
+      </div>
+
+      <div class="principal">
+        <nav>
+          <img class="logo" src="images/brand.png" alt="Instagram logo">
+          <button><img class="home" src="images/home.png" alt="Log in"> <strong> Log in </strong></button>
+        </nav>
+        <div class="capture">
+          <h2> Capture and Share<br> the World's Moments </h2>
+          <p> Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+              friends and family.</p>
+              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+              <p>Oh yeah, did we mention it's free?</p>
+          <div>
+            <img class="store" src="images/badge-iphone.png" alt="Apple Store Access">
+            <img class="store" src="images/badge-android.png" alt="Play Store Access">
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <footer>
+      <ul>
+        <li> About us </li>
+        <li> Support </li>
+        <li> Blog </li>
+        <li> Press </li>
+        <li> Api </li>
+        <li> Jobs </li>
+        <li> Privacy </li>
+        <li> Terms</li>
+        <li> &copy 2014 Instagram</li>
+      </ul>
+    </footer>
+
   </body>
 </html>
