--- a/index.html
+++ b/index.html
@@ -1,16 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+  <header>
+  </header>
+  <main>
+    <div class="main-container">
+      <a href="https://about.instagram.com/features/stories"><img src="./images/phones.png" alt="" class="phone-img"></a>
+      <div class="main-div">
+        <div class="top-banner">
+          <a href="https://www.instagram.com/" class="banner-logbtn"><img src="./images/brand.png" alt=""></a>
+          <a href="https://www.instagram.com/accounts/login/?source=auth_switcher" class="button">
+            <div class="Icon-Butt"><i class='fab fa-instagram'></i></div Text-butt>
+            <div> Log in</div>
+          </a>
+        </div>
+        <div class="content-box">
+          <h2>Capture and Share <br> the World's Moments </h2>
+          <p> Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life
+            <br> with friends and family.<br>
+            Take a picture or video, choose a filter to transform its look <br>
+            and feel, then post to Instagram &mdash; it's that easy. You can <br>
+            even share to Facebook, Twitter, Tumblr and more. It's a <br>
+            new way to see the world.<br>
+            Oh yeah, did we mention it's free?
+          </p>
+          <div>
+            <a href="https://apps.apple.com/app/instagram/id389801252?vt=lo"><img src="./images/badge-iphone.png" alt="" class="bottom-app"></a>
+            <a href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DloginPage%26ig_mid%3D50B9369A-37A8-45D1-BAFD-AAD1ED8D0039%26utm_content%3Dlo%26utm_medium%3Dbadge"> <img
+                src="./images/badge-android.png" alt=""></a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </main>
+
+  <Footer class="footer-nav">
+    <ul>
+      <li><a href="https://about.instagram.com/">ABOUT US</a></li>
+      <li><a href="https://help.instagram.com/">SUPPORT</a></li>
+      <li><a href="https://about.instagram.com/es-la/blog">BLOG</a></li>
+      <li><a href="https://help.instagram.com/252214974954612/?helpref=hc_fnav&bc[0]=Ayuda%20de%20Instagram&bc[1]=Centro%20de%20privacidad%20y%20seguridad">PRESS</a> </li>
+      <li><a href="https://www.instagram.com/developer/">API</a> </li>
+      <li><a href="https://www.instagram.com/about/jobs/">JOBS</a></li>
+      <li><a href="https://help.instagram.com/519522125107875">PRIVACY</a> </li>
+      <li><a href="https://help.instagram.com/581066165581870">TERMS</a> </li>
+      <li>© 2020 Instagram from Facebook</li>
+    </ul>
+
+  </Footer>
+
+</body>
+<script src='https://kit.fontawesome.com/a076d05399.js'></script>
+
 </html>
