--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
   </head>
   <body>
     <div class="background"></div>
-    <div class="content">
-      <section class="description">
-        <header>
+    <header>
+      <section class="content">
+        <nav>
           <img class="logo" src="images/brand.png" alt="instagram-logo">
           <button>
+            <div class="gradient"></div>
             <img src="images/home.png" alt="log-in">
             <p>Log in</p>
           </button>
-        </header>
-        <div class="text-box">
+        </nav>
+        <div class="box">
           <h1>Capture and Share<br>the World's Moments</h1>
           <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
           friends and family.
@@ -25,13 +26,14 @@
           &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
           <p>Oh yeah, did we mention it's free?</p>
           <div class="download-buttons">
-            <img src="images/badge-iphone.png" alt="app-store">
-            <img id="android" src="images/badge-android.png" alt="google-play">
+            <a href="#"><img src="images/badge-iphone.png" alt="app-store"></a>
+            <a href="#"><img id="android" src="images/badge-android.png" alt="google-play"></a>
+            
           </div>
         </div>
       </section>
       <img class="hero" src="images/phones.png" alt="phones">
-    </div>
+    </header>
     <footer>
       <ul>
         <li><a href="#">About us</a></li>
