--- a/index.html
+++ b/index.html
@@ -4,13 +4,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+
+    <link rel="stylesheet" href="styles/style.css"> </link>
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header> 
+      <div class="Page">
+        <div class="All">
+          <img src="images/phones.png" alt="phones_pic">
+        <div class="content-general">
+        <div class="Insta">
+        <div> <img src="images/brand.png" alt="instagram_logo"></div>
+        <div class="Log_in">
+            <p><img src="images/home.png" alt="logo"> Log In</p>
+          </div>
+          </div>
+  
+            <div class="content">
+
+              <h2>Capture and Share <br>
+              the World's Moments</h2>
+
+              <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
+                friends and family. <br>
+                <br>
+                
+                Take a picture or video, choose a filter to transform its look <br>
+                and feel, then post to Instagram &mdash; it's that easy. You can <br>
+                even share to Facebook, Twitter, Tumblr and more. It's a<br>
+                new way to see the world.<br>
+                <br>
+
+                Oh yeah, did we mention it's free? </p>
+            </div>
+
+            <div class="app-logos">
+              <img src="images/badge-iphone.png" alt="iphone">
+              <img src="images/badge-android.png" alt="android">
+          </div>
+          <footer>
+            <ul>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Support</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Press</a></li>
+                <li><a href="">API</a></li>
+                <li><a href="">Jobs</a></li>
+                <li><a href="">Privacy</a></li>
+                <li><a href="">Terms</a></li>
+                <li>@2014 Instagram</li>
+            </ul>
+        </footer>
+
+    </header>
   </body>
 </html>
