--- a/index.html
+++ b/index.html
@@ -5,12 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
-  </head>
+    <link rel="stylesheet" type="text/css" href="styles/style.css" media="screen" />  </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+  <header>
+      <section1>
+        
+        <div class="container1">
+        </div>
+        <div class="container2">
+          <nav>
+            <img src ="./images/brand.png">
+            <div class="home-button">
+              <img src ="./images/home.png">
+              <p>Log in</p>
+            </div>
+          </nav>
+          <div class="sub-container2">
+              <h1>Capture and Share the World's Moments</h1>
+              <p>Instagram is a fast, beautiful and fun way to share your life with
+                friends and family.</p>
+              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                  &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+              <p>Oh yeah, did we mention it's free? </p>                
+            <div class="icon">
+              <img src ="./images/badge-iphone.png">
+              <img src ="./images/badge-android.png">
+            </div>
+          </div>
+        </div>
+    </section1>
+  
+    <footer class="footer-class">
+      <ul>
+        <li>About Us </li>
+        <li>Support </li>
+        <li>Blog </li>
+        <li>Press </li>
+        <li>API </li>
+        <li>Jobs </li>
+        <li>Privacy </li> 
+        <li>Terms </li>
+        <li> &copy; 2014 Instagram </li>
+      </ul>
+     
+    </footer>
+  </header>
   </body>
 </html>
