--- a/index.html
+++ b/index.html
@@ -3,14 +3,47 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <title>Instagram</title>
+    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png">
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="main-section">
+      <div class="phones">
+        <img src="images/phones.png" alt="smartphones-img" />
+      </div>
+      <div class="text">
+        <div class="header">
+          <img src="images/brand.png" alt="instagram-branding" />
+          <button class="login-button">
+            <img src="images/home.png" alt="home-icon" />
+            <p>Log in</p>
+          </button>
+        </div>
+        <div>
+          <h1>Capture and Sharethe World's Moments</h1>
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram --- it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class="downloads">
+          <img src="images/badge-iphone.png" alt="Download on the App Store" />
+          <img src="images/badge-android.png" alt="Get it on Google Play" />
+        </div>
+      </div>
+    </div>
+    <footer>
+      <ul>
+        <li>About us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>2014 Instagram</li>
+      </ul>
+    </footer>
   </body>
 </html>
