--- a/index.html
+++ b/index.html
@@ -18,11 +18,9 @@
       <div class="content">
         <div class="logo-and-home">
           <img class="instagram-logo" src="./images/brand.png" alt="instagram-logo" />
-          <img class="home-button" src="./images/home.png" alt="home-button" />
-          <a href="#" class="log-in-btn">Log in</a>
+          <a href="#" class="log-in-btn"><img class="home-button" src="./images/home.png" alt="home-button"/>Log in</a>
         </div>
         <div class="white-box">
-          <img class="frame" src="./images/frame.png" alt="white box" />
           <h1>Instagram Capture and Share <br> the World's Moments</h1>
           <p><br>Instagram is a fast, beautiful and fun way to share your life
             <br>with friends and family.<br>
