--- a/index.html
+++ b/index.html
@@ -5,12 +5,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="container">
+      <div class="container-child">
+        <main>
+          <div class="left-container"><img src="./images/phones.png" alt="phone"></div>
+
+          <div class="right-container">
+            <div class="section-logo">
+              <img src="./images/brand.png" alt="" class="logo" />
+
+              <a href="#" class="logIn">
+                <img
+                  src="./images/home.png"
+                  alt="home icon"
+                  class="logIn-icon"
+                />
+                Log in
+              </a>
+            </div>
+
+            <div class="section-content">
+              <h1>Capture and Share <br> the World's Moments</h1>
+              <p>
+                Instagram is a <strong>fast, beautiful</strong> and
+                <strong>fun</strong> way to share your life with friends and
+                family.
+              </p>
+              <p>
+                Take a picture or video, choose a filter to transform its look
+                and feel, then post to Instagram &mdash; it's that easy. You can
+                even share to Facebook, Twitter, Tumblr and more. It's a new way
+                to see the world.
+              </p>
+              <p>Oh yeah, did we mention it's free?</p>
+
+              <div class="download-icons">
+                <a href="#"
+                  ><img src="./images/badge-iphone.png" alt="app store"
+                /></a>
+                <a href="#"
+                  ><img src="./images/badge-android.png" alt="goggle play"
+                /></a>
+              </div>
+            </div>
+          </div>
+        </main>
+
+        <footer>
+          <ul class="footer-list">
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Press</a></li>
+            <li><a href="#">API</a></li>
+            <li><a href="#">Jobs</a></li>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">&copy; 2014 Instagram</a></li>
+          </ul>
+        </footer>
+      </div>
+    </div>
   </body>
 </html>
