v1:for desktop: add 2 common selectors

--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
   </head>
   <body>
     <div class="container">
-      <div class="container-child">
-        <main>
+      <div class="container-child flex-column">
+
+        <main class="flex-row-AlignC-spaceB">
           <div class="left-container"><img src="./images/phones.png" alt="phone"></div>
 
-          <div class="right-container">
-            <div class="section-logo">
+          <div class="right-container flex-column">
+            <div class="section-logo flex-row-AlignC-spaceB">
               <img src="./images/brand.png" alt="" class="logo" />
 
-              <a href="#" class="logIn">
+              <a href="#" class="logIn flex-row-AlignC-spaceB">
                 <img
                   src="./images/home.png"
                   alt="home icon"
@@ -27,7 +28,7 @@
               </a>
             </div>
 
-            <div class="section-content">
+            <div class="section-content flex-column">
               <h1>Capture and Share <br> the World's Moments</h1>
               <p>
                 Instagram is a <strong>fast, beautiful</strong> and
@@ -55,7 +56,7 @@
         </main>
 
         <footer>
-          <ul class="footer-list">
+          <ul class="footer-list flex-row-AlignC-spaceB">
             <li><a href="#">About Us</a></li>
             <li><a href="#">Support</a></li>
             <li><a href="#">Blog</a></li>
