Structure and background

--- a/index.html
+++ b/index.html
@@ -4,13 +4,64 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style-reset.css" />
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    
+    <div class="background-blue-box">
+    </div>
+
+    <div class="father-container">
+      <div class="all-container">
+        <img class="phones" src="./images/phones.png" alt="How Intagram would look on your phone!">
+
+        <div class="info-container">
+          <header class="real-header">
+            <img src="./images/brand.png">
+
+            <button>
+              LOG IN
+            </button>
+
+          </header>
+
+          <div class="info">
+            <h1>
+              Capture and Share the World's Moments
+            </h1>
+            <p>
+              Instagram is a fast, beautiful and fun way to share your life with friends and family.<br>
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+              Oh yeah, did we mention it's free?
+            </p>
+          </div>
+
+          <div class="CTAs">
+            <img >
+            <img >
+          </div>
+        </div>
+      </div>
+
+      <footer>
+        <header>
+          <ul>
+            <li>About Us</li>
+            <li>Support</li>
+            <li>Blog</li>
+            <li>Press</li>
+            <li>API</li>
+            <li>Jobs</li>
+            <li>Privacy</li>
+            <li>Terms</li>
+          </ul>
+        </header>
+
+        <p>&copy; 2014 Instagram</p>
+
+      </footer>
+    </div>
+
   </body>
 </html>
