--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
   </head>
 
   <body>
@@ -26,18 +26,23 @@
           </div>
           <div id="right-middle">
             <h2>
-              Instagram Capture and Share the World's Moments
+              Instagram Capture and Share
+              <br>
+              the World's Moments
             </h2>
             <p>
-              Instagram is a fast, beautiful and fun way to share your life with
-              friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              Instagram is a fast, beautiful and fun way to share your life with friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            </p>
+            <p>
               Oh yeah, did we mention it's free?
             </p>
-            <div id="right-bottom">
-              <img src="images/badge-iphone.png" alt="Download on the App Store">
-              <img src="images/badge-android.png" alt="Get it on Google Play">
-            </div>
+          </div>
+          <div id="right-bottom">
+            <img src="images/badge-iphone.png" alt="Download on the App Store">
+            <img src="images/badge-android.png" alt="Get it on Google Play">
           </div>
         </div>
       </div>
