Lab Instagram clone donegit

--- a/index.html
+++ b/index.html
@@ -4,13 +4,69 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+  <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <div class="content-blue">
+    </div>
+
+    <!--CONTENT MAIN-->
+    <div class="main-content">
+
+      <!--CONTENT LEFT-->
+      <div class="content-left">
+        <img src="./images/phones.png">
+      </div>
+
+      <!--CONTENT RIGHT-->
+      <div class="content-right">
+        
+        <div class="content-right-up">
+          <img src="./images/brand.png">
+          <button id='login-btn'>
+            <img src="./images/home.png" alt="Home icon">
+            <span id="title-btn">Log in</span>
+          </button>
+        </div>
+        
+        <div class="content-rigth-down">
+          <h2>Capture and Share <br/> 
+            the World's Moments</h2>
+            <article>
+              <p>Instagram is a <span id='bold'>fast, beautiful</span> and <span id='bold'>fun</span> way to share your life<br/>
+                with friends and family.</p>
+              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              </p>
+              <p>Oh yeah, did we mention it's free?</p>
+            </article>
+            <div class="badge-phone">
+            <img src="./images/badge-iphone.png">
+            <img src="./images/badge-android.png">
+            </div>
+        </div>
+      </div>
+
+    </div>
+
+  <!--FOOTER-->
+    <div>
+      <footer>
+        <ul>
+            <li><a href="#">ABOUT US</a></li>
+            <li><a href="#">SUPPORT</a></li>
+            <li><a href="#">BLOG</a></li>
+            <li><a href="#">PRESS</a></li>
+            <li><a href="#">API</a></li>
+            <li><a href="#">JOBS</a></li>
+            <li><a href="#">PRIVACY</a></li>
+            <li><a href="#">TERMS</a></li>
+            <li id="title-insta">&copy; 2014 INSTAGRAM</li>
+        </ul>
+      </footer>
+    </div>
+
+
   </body>
 </html>
