Add responsive behaviour

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
       <section>
         <header>
           <div>
-            <img src="images/brand.png" alt="brand-image">
+            <img id ="brand-image" src="images/brand.png" alt="brand-image">
           </div>
           <div>
             <button id="log-in-bottom">
-              <img id="house-logo" src="images/home.png" alt="images-home"> 
+              <div>
+                <img id="house-logo" src="images/home.png" alt="images-home"> 
+              </div>
               <span>
-                <b>Log in</b>
+                <b><a href="#">Log in</a></b>
               </span>
             </button>
           </div>
@@ -35,26 +37,26 @@
           </p>
         </article>   
         <div id="container-2">
-          <button>
+          <div>
             <img src="images/badge-iphone.png" alt="adge-iphone-image">
-          </button>
-          <button>
+          </div>
+          <div>
             <img src="images/badge-android.png" alt="badge-android-image">
-          </button>
+          </div>
         </div>
       </section>
-   </div>
+    </div>
     <footer>
       <ul>
-        <li>About Us</li>
-        <li>Support</li>
-        <li>Blog</li>
-        <li>Press</li>
-        <li>API</li>
-        <li>Jobs</li>
-        <li>Privacy</li>
-        <li>Terms</li>
-        <li id="copyrigth">&copy; 2014 Instagram</li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li id="copyrigth"><a href="#">&copy; 2014 Instagram</a></li>
       </ul>
     </footer>
   </body>
