--- a/index.html
+++ b/index.html
@@ -5,12 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="../lab-css-instagram-clone/styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <main>
+    <header>
+      <img src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/images/phones.png" alt="phones">
+    </header>
+    <section>
+      <div class="title">
+        <img class= "logotype" src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/images/brand.png" alt="Instagram">
+        <a title="Log in" href="#"><img src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/images/home.png" alt="home">Log in</a>
+      </div>
+
+      <div class="square">
+        <h1>Capture and Share </br>the World's Moments</h1>
+        <article>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </article>
+        <a title="Iphone" href="#"><img src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/images/badge-iphone.png" alt="Download in Apple Store"></a>
+        <a title="Android" href="#"><img src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/images/badge-android.png" alt="Get it on Google play"></a>
+       </div>
+    </section>
+  </main>
+  
+    <footer>
+      <ul>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Term</a></li>
+        <li class="Colorspecialfooter">
+          <p>&copy; 2014 Instagram</p>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
+
