Done: transitions, responsive and links

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Instagram Clone</title>
     <link rel="stylesheet" href="styles/style-reset.css" />
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="icon" href="./images/ICON.png" />
   </head>
+
   <body>
-    
     <div class="background-blue-box">
     </div>
 
@@ -20,45 +21,48 @@
           <header class="real-header">
             <img src="./images/brand.png">
 
-            <button>
-              LOG IN
-            </button>
-
+            <form method="get" action="https://www.instagram.com/accounts/emailsignup/">
+              <button type="submit" class="button">
+                <img src="./images/home.png" alt="Home icon" />
+                <p>Log in</p>
+              </button>
+            </form>
           </header>
 
           <div class="info">
             <h1>
-              Capture and Share the World's Moments
+              Capture and Share <br> the World's Moments
             </h1>
-            <p>
-              Instagram is a fast, beautiful and fun way to share your life with friends and family.<br>
-              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
-              Oh yeah, did we mention it's free?
-            </p>
+            <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br></p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br></p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class="CTAs">
+              <a href="https://apps.apple.com/es/app/instagram/id389801252" target="_blank">
+               <img class="appStore" src="./images/app-store.png" alt="Download Instagram in your iPhone - App Store"/>
+              </a>
+              <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=es" target="_blank">
+                <img class="googlePlay" src="./images/gplay.png" alt="Download Instagram in your Smartphone - Google Play"/>
+              </a>
+            
+            </div>
           </div>
 
-          <div class="CTAs">
-            <img >
-            <img >
-          </div>
         </div>
       </div>
 
       <footer>
-        <header>
-          <ul>
-            <li>About Us</li>
-            <li>Support</li>
-            <li>Blog</li>
-            <li>Press</li>
-            <li>API</li>
-            <li>Jobs</li>
-            <li>Privacy</li>
-            <li>Terms</li>
-          </ul>
-        </header>
+        <ul>
+          <li><a href="https://www.instagram.com/about/us/" target="_blank">ABOUT US</a></li>
+          <li><a href="https://help.instagram.com/" target="_blank">SUPPORT</a></li>
+          <li><a href="https://about.instagram.com/es-la/blog" target="_blank">BLOG</a></li>
+          <li><a href="https://business.instagram.com/advertising/" target="_blank">PRESS</a></li>
+          <li><a href="https://www.instagram.com/developer/" target="_blank">API</a></li>
+          <li><a href="https://www.instagram.com/about/jobs/" target="_blank">JOBS</a></li>
+          <li><a href="https://help.instagram.com/519522125107875" target="_blank">PRIVACY</a></li>
+          <li><a href="https://help.instagram.com/581066165581870" target="_blank">TERMS</a></li>
+        </ul>
 
-        <p>&copy; 2014 Instagram</p>
+        <p>&copy; 2014 INSTAGRAM</p>
 
       </footer>
     </div>
